WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198377
[GStreamer] HLS stream slow start
https://bugs.webkit.org/show_bug.cgi?id=198377
Summary
[GStreamer] HLS stream slow start
Alberto Garcia
Reported
2019-05-30 09:14:28 PDT
There was regression in WebKitGTK 2.24.1 that prevented the user from playing certain kinds of internet radios. This was filed as
bug 197410
and fixed. It seems that even after the fix the playback of those streams is much slower than in WebKitGTK 2.24.0. Here are the steps (as reported by a Debian user): --------------------------------------------------- 1) Go to
http://radio.dos.nl/
2) Go to settings (drop down in right top corner) 3) Click "Choose protocol" until it shows HLS 4) Click on arrow (back to radio) 5) Click on "Page menu" (bottom left corner) and choose "news" 6) switch between the BBC stations (they're all HLS) (check the Info button on the left top corner, at the bottom of the info page there is the protocol that is used, it should show "HLS") 2.24.0 takes only tenths of a second (switches almost immediately), 2.24.1/2.24.2 takes several seconds. This is an issue that shows up with HLS stations. 2.24.0 switches much faster anyway. --------------------------------------------------- In addition to that there's also this problem, reported by the same user: --------------------------------------------------- switching too fast between two HLS stations (e.g. 5 Live and BBC Worldservice) makes the whole beast hang. No way anymore to switch between stations. Note: I use a Debian unmodified version of the "surf" webbrowser to play these stations. I need to stop "surf" in order to make it work again. --------------------------------------------------- There's another regression that I filed as
bug 198376
which might be related to this one. I chose to file them as separate bugs for the time being. Original Debian bug report:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=929749
Attachments
Patch
(1.83 KB, patch)
2019-06-12 06:29 PDT
,
Philippe Normand
calvaris
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2019-06-12 04:56:57 PDT
(In reply to Alberto Garcia from
comment #0
) [...]
> > 2.24.0 takes only tenths of a second (switches almost immediately), > 2.24.1/2.24.2 takes several seconds. This is an issue that shows up with HLS > stations. 2.24.0 switches much faster anyway.
I have a potential patch for this, will attach it here.
> --------------------------------------------------- > switching too fast between two HLS stations (e.g. 5 Live and BBC > Worldservice) makes the whole beast hang. No way anymore to switch > between stations. Note: I use a Debian unmodified version of the > "surf" webbrowser to play these stations. I need to stop "surf" in > order to make it work again.
This is
https://bugs.webkit.org/show_bug.cgi?id=197558
> > There's another regression that I filed as
bug 198376
which might be > related to this one. I chose to file them as separate bugs for the > time being. >
I'll have a look.
Philippe Normand
Comment 2
2019-06-12 06:29:25 PDT
Created
attachment 371949
[details]
Patch
Xabier Rodríguez Calvar
Comment 3
2019-06-12 06:56:35 PDT
Phil, I think it would make sense to write a quick test for this, don't you think?
Philippe Normand
Comment 4
2019-06-12 06:59:21 PDT
A test measuring start-up time? How?
Philippe Normand
Comment 5
2019-06-13 07:05:01 PDT
Committed
r246399
: <
https://trac.webkit.org/changeset/246399
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug