[GStreamer] HLS stream slow start https://bugs.webkit.org/show_bug.cgi?id=198377

Reviewed by Xabier Rodriguez-Calvar.

* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(webKitWebSrcCreate): Cut down the adapter condition to 200 ms to
improve start-up times for HLS playback.

Canonical link: https://commits.webkit.org/212801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246399 268f45cc-cd09-0410-ab3c-d52691b4dbfc